--- a/env.yml
+++ b/env.yml
@@ -10,4 +10,12 @@ redis:
   host: '192.168.3.94'
   port: 6379
 
+app:
+  name: Cashly
+  url: 'http://127.0.0.1:8080'
+
+smtp:
+  host: '192.168.3.94'
+  port: 1025
+
 isProduction: false
