--- a/env.yml
+++ b/env.yml
@@ -7,16 +7,16 @@ database:
   autoMigrate: true
 
 redis:
-  host: '192.168.3.94'
+  host: '127.0.0.1'
   port: 6379
 
 app:
   name: Cashly
-  url: 'http://127.0.0.1:8080'
+  url: 'http://localhost:3000'
 
 smtp:
-  host: '192.168.3.94'
+  host: '127.0.0.1'
   port: 1025
-  from: 'Cashly <no-reply@cashly.com>'
+  from: 'no-reply@cashly.com'
 
 isProduction: false
