feat: implement JWT generation and validation functions, add password hashing utilities

--- a/env.yml
+++ b/env.yml
@@ -13,6 +13,7 @@ redis:
 app:
   name: Cashly
   url: 'http://localhost:3000'
+  jwtSecret: '1186360d75e80b16324bea5c941c96c1'
 
 smtp:
   host: '127.0.0.1'
